to do: fix scrollbar on mobile

--- a/src/styles/layout/scrollbar.css
+++ b/src/styles/layout/scrollbar.css
@@ -4,6 +4,6 @@
 
 .swiper-scrollbar-horizontal {
     background: rgba(212, 212, 212, 0.3) !important;
-    width: 80vw !important;
+    width: 100vw !important;
 }
 
