--- a/src/styles/pages/content_responsivity_global.css
+++ b/src/styles/pages/content_responsivity_global.css
@@ -7,6 +7,13 @@
 
 .exhibitionSlide > div > div:last-child > div {
     background-color: #6e6e6e !important;
+    
+
+}
+
+.exhibitionSlide > div > div:last-child {
+    display: block !important;
+    background-color: #dadada !important;
 }
 
 @media screen and (min-width: 768px) {
@@ -24,13 +31,13 @@
 
 }
 
-/* Scrollbar styling for Firefox */
+
 #artwork_page::-webkit-scrollbar {
     width: 12px;
 }
 
 #artwork_page::-webkit-scrollbar-track {
-    background: white;
+    background: rgb(255, 255, 255);
     border-radius: 10px;
 }
 
@@ -42,7 +49,7 @@
 
 #artwork_page::-webkit-scrollbar-thumb:hover {
     background-color: darkgrey;
-}
+} 
 
 p {
     font-size: 17.71px;
